# ssh-manager

./: .gitignore  README copy.md  README.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
icons/: icon.icns
scripts/: generate-incs.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: key_manager.rs  mod.rs
src-tauri/src/security/: mod.rs
src/frontend/: App.svelte  index.html  main.ts  types.d.ts
src/frontend/components/: ConfigEditor.svelte  ConfirmDialog.svelte  KeyDetailDialog.svelte  KeyList.svelte  LanguageSelector.svelte  Notification.svelte  Settings.svelte
src/frontend/i18n/: index.ts
src/frontend/stores/: keys.ts  theme.ts
