[package]
name = "git-key-manager"
version = "1.0.0-beta.1"
edition = "2021"
description = "A cross-platform Git key management tool"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
git2 = "0.18"
openssh-keys = "0.6"
libsodium-sys = "0.2"
notify = "6.1"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.vcpkg]
dependencies = ["zlib"]
git = "https://github.com/microsoft/vcpkg"
rev = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" } 
